--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,20 @@ table tbody tr td {
 	padding-bottom: 20px;
 	vertical-align: top;
 }
+.card .card-body {
+	padding-top: 0.5rem;
+	padding-bottom: 0;
+}
+.send-msg{
+	margin-top: 10px;
+}
+.send-msg input{
+	width: 75%; 
+	display: inline; 
+	padding: 0.8rem;
+}
+.chatBox{
+	max-height: 90vh; 
+	width: 90vw; 
+	overflow: overlay;
+}
